src/objects/MentorComments__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Mentor Comments</relationshipLabel>
        <relationshipName>Mentor_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Mentor Comments</relationshipLabel>
        <relationshipName>Mentor_Comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <label>Mentor Comments</label>
    <nameField>
        <displayFormat>-{000000}</displayFormat>
        <label>Mentor Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentor Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>